apps/soap-external-service/experiments/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soap-experiment
  labels:
    app.kubernetes.io/part-of: connectivity-link-tutorial
